feat: Update LINUX24 dataset processing and logging
- Enhanced dataset analysis in `dataset_analysis.ipynb` to include all columns from LINUX24.csv in the log file.
- Modified `data_process.py` to correctly parse timestamps for LINUX24 dataset.
- Updated `deeplog.py` to set semantics option to False for training.
- Adjusted `sample.py` to handle embeddings based on updated semantics flag.
- Refined `session.py` to ensure proper DataFrame column names for sliding windows.
- Revised `Spell.py` to change output directory and log format for LINUX24.
- Updated `main_run.py` to include LINUX24 in dataset options for model training.

--- a/dataset_analysis.ipynb
+++ b/dataset_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "4e05dfd4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "ecd2b6a5",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "2c601d5c",
    "metadata": {},
    "outputs": [],
@@ -3144,7 +3144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
+   "id": "b2f95956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(os.path.join(PREP_DATASET, \"LINUX24\", \"LINUX24.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "fe884e14",
    "metadata": {},
    "outputs": [
@@ -3152,13 +3162,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Log file saved to: /home/ahmed.bargady/lustre/nlp_team-um6p-st-sccs-id7fz1zvotk/IDS/ahmed.bargady/data/github/my-logadempirical/dataset/preprocessed/LINUX24/LINUX24.log\n"
+      "Log file saved to: /home/ahmed.bargady/lustre/nlp_team-um6p-st-sccs-id7fz1zvotk/IDS/ahmed.bargady/data/github/my-logadempirical/dataset/preprocessed/LINUX24/old_2_LINUX24.log\n"
      ]
     }
    ],
    "source": [
     "# save log_cleaned column from df to a .log file with a '- ' prefix for each line\n",
-    "log_file_path = os.path.join(LINUX_DIR, \"LINUX24.log\")\n",
+    "log_file_path = os.path.join(LINUX_DIR, \"old_2_LINUX24.log\")\n",
     "with open(log_file_path, 'w') as f:\n",
     "    for line in df['content']:\n",
     "        f.write(f\"- {line}\\n\")\n",
@@ -3167,11 +3177,358 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2e1fa7ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log file with all columns saved to: /home/ahmed.bargady/lustre/nlp_team-um6p-st-sccs-id7fz1zvotk/IDS/ahmed.bargady/data/github/my-logadempirical/dataset/preprocessed/LINUX24/LINUX24.log\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instead of saving only the content in the log file, we will save all the columns in a specific format\n",
+    "# - <timestamp> : <location> : <src_id> : <content> : <mitre_id> : <mitre_tactic> : <mitre_technique> : <label>\n",
+    "log_file_path = os.path.join(LINUX_DIR, \"LINUX24.log\")\n",
+    "with open(log_file_path, 'w') as f:\n",
+    "    for _, row in df.iterrows():\n",
+    "        line = f\"- {row['timestamp']} : {row['location']} : {row['src_id']} : {row['content']} : {row['mitre_id']} : {row['mitre_tactic']} : {row['mitre_technique']} : {row['label']}\\n\"\n",
+    "        f.write(line)\n",
+    "print(f\"Log file with all columns saved to: {log_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "01621885",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>location</th>\n",
+       "      <th>src_id</th>\n",
+       "      <th>content</th>\n",
+       "      <th>mitre_id</th>\n",
+       "      <th>mitre_tactic</th>\n",
+       "      <th>mitre_technique</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-10-01 00:49:18.889</td>\n",
+       "      <td>rootcheck</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>Trojaned version of file '/bin/diff' detected....</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-10-01 00:49:18.917</td>\n",
+       "      <td>rootcheck</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>Trojaned version of file '/usr/bin/diff' detec...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-10-01 00:49:30.034</td>\n",
+       "      <td>wazuh-monitord</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>ossec: Manager started.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-10-01 00:49:35.008</td>\n",
+       "      <td>/var/log/dpkg.log</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>&lt;TIMESTAMP&gt; install filebeat:amd64 &lt;none&gt; 7.10.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-10-01 00:49:37.011</td>\n",
+       "      <td>/var/log/dpkg.log</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>&lt;TIMESTAMP&gt; status half-configured filebeat:am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 timestamp           location        src_id  \\\n",
+       "0  2023-10-01 00:49:18.889          rootcheck  1.696121e+09   \n",
+       "1  2023-10-01 00:49:18.917          rootcheck  1.696121e+09   \n",
+       "2  2023-10-01 00:49:30.034     wazuh-monitord  1.696121e+09   \n",
+       "3  2023-10-01 00:49:35.008  /var/log/dpkg.log  1.696121e+09   \n",
+       "4  2023-10-01 00:49:37.011  /var/log/dpkg.log  1.696121e+09   \n",
+       "\n",
+       "                                             content mitre_id mitre_tactic  \\\n",
+       "0  Trojaned version of file '/bin/diff' detected....      NaN          NaN   \n",
+       "1  Trojaned version of file '/usr/bin/diff' detec...      NaN          NaN   \n",
+       "2                            ossec: Manager started.      NaN          NaN   \n",
+       "3   <TIMESTAMP> install filebeat:amd64 <none> 7.10.2      NaN          NaN   \n",
+       "4  <TIMESTAMP> status half-configured filebeat:am...      NaN          NaN   \n",
+       "\n",
+       "  mitre_technique  label  \n",
+       "0             NaN      0  \n",
+       "1             NaN      0  \n",
+       "2             NaN      0  \n",
+       "3             NaN      0  \n",
+       "4             NaN      0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e6b4108e",
    "metadata": {},
    "source": [
     "## SPELL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416eb822",
+   "metadata": {},
+   "source": [
+    "### TEST ONE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1996d27b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((121590, 11), (1290, 3))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_df_s = pd.read_csv(os.path.join(LINUX_DIR, \"LINUX24.log_structured.csv\"))\n",
+    "_df_t = pd.read_csv(os.path.join(LINUX_DIR, \"LINUX24.log_templates.csv\"))\n",
+    "_df_s.shape, _df_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c472f6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LineId</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>SrcId</th>\n",
+       "      <th>Content</th>\n",
+       "      <th>MitreId</th>\n",
+       "      <th>MitreTactic</th>\n",
+       "      <th>MitreTechnique</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>EventId</th>\n",
+       "      <th>EventTemplate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-10-01 00:49:18.889</td>\n",
+       "      <td>rootcheck</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>Trojaned version of file '/bin/diff' detected....</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52586b5f</td>\n",
+       "      <td>Trojaned version of file  bin diff  detected  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-10-01 00:49:18.917</td>\n",
+       "      <td>rootcheck</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>Trojaned version of file '/usr/bin/diff' detec...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52586b5f</td>\n",
+       "      <td>Trojaned version of file  bin diff  detected  ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2023-10-01 00:49:30.034</td>\n",
+       "      <td>wazuh-monitord</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>ossec: Manager started.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40bd922a</td>\n",
+       "      <td>ossec  Manager started</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2023-10-01 00:49:35.008</td>\n",
+       "      <td>/var/log/dpkg.log</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>&lt;TIMESTAMP&gt; install filebeat:amd64 &lt;none&gt; 7.10.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ac2c3f4e</td>\n",
+       "      <td>&lt;TIMESTAMP&gt; install filebeat amd64 &lt;none&gt; 7 10 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2023-10-01 00:49:37.011</td>\n",
+       "      <td>/var/log/dpkg.log</td>\n",
+       "      <td>1.696121e+09</td>\n",
+       "      <td>&lt;TIMESTAMP&gt; status half-configured filebeat:am...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2f12da89</td>\n",
+       "      <td>&lt;*&gt; &lt;*&gt; amd64 7 10 2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LineId                Timestamp           Location         SrcId  \\\n",
+       "0       1  2023-10-01 00:49:18.889          rootcheck  1.696121e+09   \n",
+       "1       2  2023-10-01 00:49:18.917          rootcheck  1.696121e+09   \n",
+       "2       3  2023-10-01 00:49:30.034     wazuh-monitord  1.696121e+09   \n",
+       "3       4  2023-10-01 00:49:35.008  /var/log/dpkg.log  1.696121e+09   \n",
+       "4       5  2023-10-01 00:49:37.011  /var/log/dpkg.log  1.696121e+09   \n",
+       "\n",
+       "                                             Content MitreId MitreTactic  \\\n",
+       "0  Trojaned version of file '/bin/diff' detected....     NaN         NaN   \n",
+       "1  Trojaned version of file '/usr/bin/diff' detec...     NaN         NaN   \n",
+       "2                            ossec: Manager started.     NaN         NaN   \n",
+       "3   <TIMESTAMP> install filebeat:amd64 <none> 7.10.2     NaN         NaN   \n",
+       "4  <TIMESTAMP> status half-configured filebeat:am...     NaN         NaN   \n",
+       "\n",
+       "  MitreTechnique Label   EventId  \\\n",
+       "0            NaN     0  52586b5f   \n",
+       "1            NaN     0  52586b5f   \n",
+       "2            NaN     0  40bd922a   \n",
+       "3            NaN     0  ac2c3f4e   \n",
+       "4            NaN     0  2f12da89   \n",
+       "\n",
+       "                                       EventTemplate  \n",
+       "0  Trojaned version of file  bin diff  detected  ...  \n",
+       "1  Trojaned version of file  bin diff  detected  ...  \n",
+       "2                             ossec  Manager started  \n",
+       "3   <TIMESTAMP> install filebeat amd64 <none> 7 10 2  \n",
+       "4                               <*> <*> amd64 7 10 2  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_df_s.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54c96294",
+   "metadata": {},
+   "source": [
+    "### REAL"
    ]
   },
   {
@@ -4305,11 +4662,25 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af336d34",
+   "metadata": {},
+   "source": [
+    "# Models Training\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38c6060",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "first",
    "language": "python",
    "name": "python3"
   },
@@ -4323,7 +4694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
